--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -41,13 +41,6 @@ runs:
         mv sops-v3.9.0.linux.amd64 /usr/local/bin/sops
         chmod +x /usr/local/bin/sops
     
-    - name: Set up Java and Maven
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-
     - name: ENVGENE HELPER test
       shell: bash
       run: |
@@ -64,12 +57,29 @@ runs:
     #    cd ../..
     #    mv junit.xml junit_build_env.xml
 
-    - name: CLI MODULE test
+    - name: Test CLI Module
+      uses: netcracker/qubership-workflow-hub/.github/workflows/maven-publish.yml@main
+      with:
+        maven-command: "--batch-mode verify"
+        java-version: "17"
+        upload-artifact: true
+        artifact-id: cli-test-artifact
+        ref: ${{ github.ref }}
+      secrets:
+        maven-token: ${{ secrets.GITHUB_TOKEN }}
+
+
+    - name: Download Java test artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: cli-test-artifact
+        path: cli-test-results
+
+
+    - name: Move Java JUnit XML
       shell: bash
       run: |
-        cd build_effective_set_generator_java
-        mvn clean install
-        cp target/surefire-reports/*.xml ../junit_java.xml
+        find cli-test-results -name "TEST-*.xml" -exec cp {} junit_java.xml \;
 
     - name: Merge test results
       shell: bash
