feat: Updated the dockerimage

--- a/build_envgene/ansible/roles/set_template_version/tasks/01_prepare_vars.yaml
+++ b/build_envgene/ansible/roles/set_template_version/tasks/01_prepare_vars.yaml
@@ -29,9 +29,7 @@
 
     - name: Find env_definition path
       find:
-        paths: 
-          - "{{ reg_env_definition_dir.files[0].path }}/Inventory"
-          - "{{ reg_env_definition_dir.files[0].path }}/inventory"
+        paths: "{{ reg_env_definition_dir.files[0].path }}"
         file_type: file
         recurse: yes
         use_regex: yes
