fix: fixed permission issue

--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -70,6 +70,7 @@ runs:
           echo "Running Maven tests..."
 
           if [ -f mvnw ]; then
+            chmod +x mvnw
             ./mvnw test
           else
             mvn test
