--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -60,7 +60,7 @@ runs:
     #    pytest --capture=no -W ignore::DeprecationWarning --junitxml=../../junit.xml
     #    cd ../..
     #    mv junit.xml junit_build_env.xml
-    
+
     - name: Set up Java
       uses: actions/setup-java@v4
       with:
@@ -77,6 +77,7 @@ runs:
           echo "Running Maven tests..."
 
           if [ -f mvnw ]; then
+            chmod +x mvnw
             ./mvnw test
           else
             mvn test
