--- a/.github/actions/build-effective-set/action.yml
+++ b/.github/actions/build-effective-set/action.yml
@@ -1,3 +1,4 @@
+# This action is hidden from the GitHub Actions UI
 name: 'Build Effective Set Generator Docker Image'
 description: 'Build and push Effective Set Generator docker image to container registry'
 
