--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -25,6 +25,11 @@ on:
         required: false
         default: true
         type: boolean
+      build-effective-set-python:
+        description: 'Build Effective Set Generator Python image'
+        required: false
+        default: true
+        type: boolean
   push:
     branches:
       - '**'
@@ -38,15 +43,25 @@ env:
   REGISTRY: ghcr.io
   CI_PROJECT_DIR: ${{ github.workspace }}
 
+permissions:
+  contents: read
+  packages: write
+  attestations: write
+  id-token: write
+
 jobs:
   tests:
-    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
+    if: |
+      github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
     runs-on: ubuntu-latest
     container:
       image: python:3.10-slim-bookworm
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Check Conventional Commits
+        uses: webiny/action-conventional-commits@v1.3.0
       
       - name: Run Tests
         uses: ./.github/actions/run-tests
@@ -144,4 +159,24 @@ jobs:
           registry: ${{ env.REGISTRY }}
           git-user: ${{ secrets.GIT_USER }}
           git-token: ${{ secrets.GIT_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }} 
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  build-effective-set-generator-python:
+    needs: [tests]
+    if: (github.event_name == 'workflow_dispatch' && github.event.inputs.build-effective-set-python == 'true') || (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Build Effective Set Generator Python Docker Image
+        uses: ./.github/actions/build-effective-set-python
+        with:
+          registry: ${{ env.REGISTRY }}
+          gh-access-token: ${{ secrets.GH_ACCESS_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
