--- a/build_effective_set_generator_java/effective-set-generator/src/test/resources/test-data/ns-test.application-test/deployment-parameters.yaml
+++ b/build_effective_set_generator_java/effective-set-generator/src/test/resources/test-data/ns-test.application-test/deployment-parameters.yaml
@@ -19,23 +19,23 @@ CONSUL_PUBLIC_URL: https://test-consul.cloud
 CONSUL_URL: http://test-consul:8500
 CUSTOM_HOST: test.cloud.com
 DBAAS_AGGREGATOR_ADDRESS: https://test-dbaas.cloud
-DBAAS_AGGREGATOR_PASSWORD: Bnmq5567_PO
-DBAAS_AGGREGATOR_USERNAME: cluster-dba
-DBAAS_CLUSTER_DBA_CREDENTIALS_PASSWORD: Bnmq5567_PO
-DBAAS_CLUSTER_DBA_CREDENTIALS_USERNAME: cluster-dba
+DBAAS_AGGREGATOR_PASSWORD: ""
+DBAAS_AGGREGATOR_USERNAME: ""
+DBAAS_CLUSTER_DBA_CREDENTIALS_PASSWORD: ""
+DBAAS_CLUSTER_DBA_CREDENTIALS_USERNAME: ""
 DBAAS_ENABLED: 'true'
 ESCAPE_SEQUENCE: 'true'
 GATEWAY_URL: http://internal-gateway-service:8080
-MAAS_CREDENTIALS_PASSWORD: client
-MAAS_CREDENTIALS_USERNAME: client
+MAAS_CREDENTIALS_PASSWORD: ""
+MAAS_CREDENTIALS_USERNAME: ""
 MAAS_ENABLED: 'true'
 MAAS_EXTERNAL_ROUTE: http://test-service.maas:8008
 MAAS_INTERNAL_ADDRESS: http://test-service.maas:8008
 MAAS_SERVICE_ADDRESS: http://test-service.maas:8008
-NAMESPACE: ns-test
+NAMESPACE: ns01
 NS_PARAM: '1'
 OPENSHIFT_SERVER: https://test.cloud.com:8888
-ORIGIN_NAMESPACE: ns-test
+ORIGIN_NAMESPACE: ns01
 PRIVATE_GATEWAY_URL: https://private-gateway-ns-test.test.cloud.com
 PRIVATE_IDENTITY_PROVIDER_URL: https://private-gateway-ns-test.test.cloud.com
 PRODUCTION_MODE: 'false'
@@ -68,23 +68,23 @@ global: &id001
   CONSUL_URL: http://test-consul:8500
   CUSTOM_HOST: test.cloud.com
   DBAAS_AGGREGATOR_ADDRESS: https://test-dbaas.cloud
-  DBAAS_AGGREGATOR_PASSWORD: Bnmq5567_PO
-  DBAAS_AGGREGATOR_USERNAME: cluster-dba
-  DBAAS_CLUSTER_DBA_CREDENTIALS_PASSWORD: Bnmq5567_PO
-  DBAAS_CLUSTER_DBA_CREDENTIALS_USERNAME: cluster-dba
+  DBAAS_AGGREGATOR_PASSWORD: ""
+  DBAAS_AGGREGATOR_USERNAME: ""
+  DBAAS_CLUSTER_DBA_CREDENTIALS_PASSWORD: ""
+  DBAAS_CLUSTER_DBA_CREDENTIALS_USERNAME: ""
   DBAAS_ENABLED: 'true'
   ESCAPE_SEQUENCE: 'true'
   GATEWAY_URL: http://internal-gateway-service:8080
-  MAAS_CREDENTIALS_PASSWORD: client
-  MAAS_CREDENTIALS_USERNAME: client
+  MAAS_CREDENTIALS_PASSWORD: ""
+  MAAS_CREDENTIALS_USERNAME: ""
   MAAS_ENABLED: 'true'
   MAAS_EXTERNAL_ROUTE: http://test-service.maas:8008
   MAAS_INTERNAL_ADDRESS: http://test-service.maas:8008
   MAAS_SERVICE_ADDRESS: http://test-service.maas:8008
-  NAMESPACE: ns-test
+  NAMESPACE: ns01
   NS_PARAM: '1'
   OPENSHIFT_SERVER: https://test.cloud.com:8888
-  ORIGIN_NAMESPACE: ns-test
+  ORIGIN_NAMESPACE: ns01
   PRIVATE_GATEWAY_URL: https://private-gateway-ns-test.test.cloud.com
   PRIVATE_IDENTITY_PROVIDER_URL: https://private-gateway-ns-test.test.cloud.com
   PRODUCTION_MODE: 'false'
