--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -168,7 +168,10 @@ jobs:
       - build-qubership-envgene
       - build-effective-set-generator
       - build-effective-set-generator-python
-    if: (github.event_name == 'workflow_dispatch' && github.event.inputs.build-pipeline == 'true') || (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
+    if: |
+      always() && 
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.build-pipeline == 'true') || 
+      (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -190,25 +193,50 @@ jobs:
           echo "Current branch: $BRANCH_NAME"
           echo "Docker tag: $DOCKER_TAG"
           
-          sed -i "s|qubership-gcip:[^'[:space:]]*|qubership-gcip:$DOCKER_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
-          sed -i "s|qubership-envgene:[^'[:space:]]*|qubership-envgene:$DOCKER_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
-          sed -i "s|qubership-effective-set-generator:[^'[:space:]]*|qubership-effective-set-generator:$DOCKER_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
-          sed -i "s|qubership-effective-set-generator-python:[^'[:space:]]*|qubership-effective-set-generator-python:$DOCKER_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+          # Check which images were built and update accordingly
+          if [[ "${{ needs.build-qubership-gcip.result }}" == "success" ]]; then
+            echo "Updating qubership-gcip tag to $DOCKER_TAG"
+            sed -i "s|qubership-gcip:[^'[:space:]]*|qubership-gcip:$DOCKER_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+          fi
           
-          echo "Updated pipeline.yml with docker tag: $DOCKER_TAG"
+          if [[ "${{ needs.build-qubership-envgene.result }}" == "success" ]]; then
+            echo "Updating qubership-envgene tag to $DOCKER_TAG"
+            sed -i "s|qubership-envgene:[^'[:space:]]*|qubership-envgene:$DOCKER_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+          fi
+          
+          if [[ "${{ needs.build-effective-set-generator.result }}" == "success" ]]; then
+            echo "Updating qubership-effective-set-generator tag to $DOCKER_TAG"
+            sed -i "s|qubership-effective-set-generator:[^'[:space:]]*|qubership-effective-set-generator:$DOCKER_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+          fi
+          
+          if [[ "${{ needs.build-effective-set-generator-python.result }}" == "success" ]]; then
+            echo "Updating qubership-effective-set-generator-python tag to $DOCKER_TAG"
+            sed -i "s|qubership-effective-set-generator-python:[^'[:space:]]*|qubership-effective-set-generator-python:$DOCKER_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+          fi
+          
+          # Check if any images were updated
+          if git diff --quiet github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml; then
+            echo "No changes to commit - no images were built or tags were already up to date"
+          else
+            echo "Updated pipeline.yml with docker tag: $DOCKER_TAG"
+          fi
           
           # Show the changes
           echo "Changes made to pipeline.yml:"
           git diff github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml || true
           
-          # Commit the changes
-          git config --global user.name "qubership-actions[bot]"
-          git config --global user.email "qubership-actions[bot]@users.noreply.github.com"
-          git add github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
-          git commit -m "Update docker image tags to $DOCKER_TAG for branch $BRANCH_NAME" || echo "No changes to commit"
-          
-          # Push the changes
-          git push origin HEAD:${{ github.ref_name }} || echo "Failed to push changes"
+          # Commit the changes only if there are actual changes
+          if ! git diff --quiet github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml; then
+            git config --global user.name "qubership-actions[bot]"
+            git config --global user.email "qubership-actions[bot]@users.noreply.github.com"
+            git add github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            git commit -m "Update docker image tags to $DOCKER_TAG for branch $BRANCH_NAME"
+            
+            # Push the changes
+            git push origin HEAD:${{ github.ref_name }} || echo "Failed to push changes"
+          else
+            echo "No changes to commit - skipping git operations"
+          fi
 
   build-instance-repo-pipeline:
     needs: [tests, update-pipeline-yml]
