--- a/.github/actions/build-pipeline/action.yml
+++ b/.github/actions/build-pipeline/action.yml
@@ -35,11 +35,44 @@ runs:
         username: ${{ github.actor }}
         password: ${{ inputs.github-token }}
 
+    - name: Generate custom tags with timestamp
+      id: tags
+      run: |
+        # Get current branch name and convert slashes to dashes
+        BRANCH_NAME="${{ github.ref_name }}"
+        DOCKER_TAG=$(echo "$BRANCH_NAME" | sed 's|/|-|g')
+        
+        # Generate timestamp in format YYYYMMDD-HHMMSS
+        TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+        
+        # Create custom tag: branch_timestamp
+        CUSTOM_TAG="${DOCKER_TAG}_${TIMESTAMP}"
+        
+        # Create branch-latest tag for the current branch
+        BRANCH_LATEST_TAG="${DOCKER_TAG}-latest"
+        
+        echo "Branch: $BRANCH_NAME"
+        echo "Docker tag: $DOCKER_TAG"
+        echo "Timestamp: $TIMESTAMP"
+        echo "Custom tag: $CUSTOM_TAG"
+        echo "Branch latest tag: $BRANCH_LATEST_TAG"
+        
+        # Set output for next steps
+        echo "custom_tag=$CUSTOM_TAG" >> $GITHUB_OUTPUT
+        echo "branch_tag=$DOCKER_TAG" >> $GITHUB_OUTPUT
+        echo "timestamp=$TIMESTAMP" >> $GITHUB_OUTPUT
+        echo "branch_latest_tag=$BRANCH_LATEST_TAG" >> $GITHUB_OUTPUT
+
     - name: Extract metadata (tags, labels) for Docker
       id: meta
       uses: docker/metadata-action@v5
       with:
         images: ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=sha,prefix={{branch}}-{{sha}},suffix={{timestamp}}
+          type=raw,value={{branch}}_{{timestamp}}
     
     - name: Build and push Docker image
       id: push
@@ -48,7 +81,10 @@ runs:
         context: .
         file: ${{ inputs.dockerfile-path }}
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
+        tags: |
+          ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.custom_tag }}
+          ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.branch_latest_tag }}
+          ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
           GH_ACCESS_TOKEN=${{ inputs.gh-access-token }} 
