--- a/.github/actions/build-envgene/action.yml
+++ b/.github/actions/build-envgene/action.yml
@@ -64,17 +64,17 @@ runs:
         echo "timestamp=$TIMESTAMP" >> $GITHUB_OUTPUT
         echo "branch_latest_tag=$BRANCH_LATEST_TAG" >> $GITHUB_OUTPUT
 
-    - name: Extract metadata (tags, labels) for Docker
+        - name: Extract metadata (tags, labels) for Docker
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}
+        images: ${{ inputs.registry }}/${{ github.repository_owner | lower }}/${{ inputs.image-name }}
         tags: |
           type=ref,event=branch
           type=ref,event=pr
           type=sha,prefix={{branch}}-{{sha}},suffix={{timestamp}}
           type=raw,value={{branch}}_{{timestamp}}
-    
+  
     - name: Build and push Docker image
       id: push
       uses: docker/build-push-action@v6
@@ -83,8 +83,8 @@ runs:
         file: ${{ inputs.dockerfile-path }}
         push: true
         tags: |
-          ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.custom_tag }}
-          ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.branch_latest_tag }}
+          ${{ inputs.registry }}/${{ github.repository_owner | lower }}/${{ inputs.image-name }}:${{ steps.tags.outputs.custom_tag }}
+          ${{ inputs.registry }}/${{ github.repository_owner | lower }}/${{ inputs.image-name }}:${{ steps.tags.outputs.branch_latest_tag }}
           ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
