--- a/.github/actions/build-pipeline/action.yml
+++ b/.github/actions/build-pipeline/action.yml
@@ -68,7 +68,7 @@ runs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}
+        images: ${{ inputs.registry }}/${{ github.repository_owner | lower }}/${{ inputs.image-name }}
         tags: |
           type=ref,event=branch
           type=ref,event=pr
@@ -83,8 +83,8 @@ runs:
         file: ${{ inputs.dockerfile-path }}
         push: true
         tags: |
-          ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.custom_tag }}
-          ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.branch_latest_tag }}
+          ${{ inputs.registry }}/${{ github.repository_owner | lower }}/${{ inputs.image-name }}:${{ steps.tags.outputs.custom_tag }}
+          ${{ inputs.registry }}/${{ github.repository_owner | lower }}/${{ inputs.image-name }}:${{ steps.tags.outputs.branch_latest_tag }}
           ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
