chore: removed word latest

--- a/.github/actions/build-effective-set/action.yml
+++ b/.github/actions/build-effective-set/action.yml
@@ -63,7 +63,7 @@ runs:
         CUSTOM_TAG="${DOCKER_TAG}_${TIMESTAMP}"
         
         # Create branch-latest tag for the current branch
-        BRANCH_LATEST_TAG="${DOCKER_TAG}-latest"
+        BRANCH_LATEST_TAG="${DOCKER_TAG}"
         
         echo "Branch: $BRANCH_NAME"
         echo "Docker tag: $DOCKER_TAG"
