--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -174,13 +174,15 @@ jobs:
       (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
       attestations: write
       id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Update Docker Image Tags in Pipeline
         run: |
