--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -208,22 +208,22 @@ jobs:
           # Check which images were built and update accordingly
           if [[ "${{ needs.build-qubership-gcip.result }}" == "success" ]]; then
             echo "Updating qubership-gcip tag to $BRANCH_LATEST_TAG"
-            sed -i "s|qubership-gcip:[^'[:space:]]*|qubership-gcip:$BRANCH_LATEST_TAG\'|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-gcip:[^']*|qubership-gcip:$BRANCH_LATEST_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-qubership-envgene.result }}" == "success" ]]; then
             echo "Updating qubership-envgene tag to $BRANCH_LATEST_TAG"
-            sed -i "s|qubership-envgene:[^'[:space:]]*|qubership-envgene:$BRANCH_LATEST_TAG\'|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-envgene:[^']*|qubership-envgene:$BRANCH_LATEST_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-effective-set-generator.result }}" == "success" ]]; then
             echo "Updating qubership-effective-set-generator tag to $BRANCH_LATEST_TAG"
-            sed -i "s|qubership-effective-set-generator:[^'[:space:]]*|qubership-effective-set-generator:$BRANCH_LATEST_TAG\'|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-effective-set-generator:[^']*|qubership-effective-set-generator:$BRANCH_LATEST_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-effective-set-generator-python.result }}" == "success" ]]; then
             echo "Updating qubership-effective-set-generator-python tag to $BRANCH_LATEST_TAG"
-            sed -i "s|qubership-effective-set-generator-python:[^'[:space:]]*|qubership-effective-set-generator-python:$BRANCH_LATEST_TAG\'|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            sed -i "s|qubership-effective-set-generator-python:[^']*|qubership-effective-set-generator-python:$BRANCH_LATEST_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           # Check if any images were updated
