--- a/.github/actions/build-effective-set-python/action.yml
+++ b/.github/actions/build-effective-set-python/action.yml
@@ -26,6 +26,20 @@ inputs:
     description: 'GitHub token for registry login'
     required: true
 
+outputs:
+  custom-tag:
+    description: 'Custom tag with timestamp'
+    value: ${{ steps.generate-tags.outputs.custom-tag }}
+  branch-tag:
+    description: 'Branch-based tag'
+    value: ${{ steps.generate-tags.outputs.branch-tag }}
+  timestamp:
+    description: 'Generated timestamp'
+    value: ${{ steps.generate-tags.outputs.timestamp }}
+  branch-latest-tag:
+    description: 'Branch latest tag'
+    value: ${{ steps.generate-tags.outputs.branch-latest-tag }}
+
 runs:
   using: composite
   steps:
@@ -39,34 +53,9 @@ runs:
         username: ${{ github.actor }}
         password: ${{ inputs.github-token }}
 
-    - name: Generate custom tags with timestamp
-      id: tags
-      shell: bash
-      run: |
-        # Get current branch name and convert slashes to dashes
-        BRANCH_NAME="${{ github.ref_name }}"
-        DOCKER_TAG=$(echo "$BRANCH_NAME" | sed 's|/|-|g')
-        
-        # Generate timestamp in format YYYYMMDD-HHMMSS
-        TIMESTAMP=$(date +%Y%m%d-%H%M%S)
-        
-        # Create custom tag: branch_timestamp
-        CUSTOM_TAG="${DOCKER_TAG}_${TIMESTAMP}"
-        
-        # Create branch-latest tag for the current branch
-        BRANCH_LATEST_TAG="${DOCKER_TAG}"
-        
-        echo "Branch: $BRANCH_NAME"
-        echo "Docker tag: $DOCKER_TAG"
-        echo "Timestamp: $TIMESTAMP"
-        echo "Custom tag: $CUSTOM_TAG"
-        echo "Branch latest tag: $BRANCH_LATEST_TAG"
-        
-        # Set output for next steps
-        echo "custom_tag=$CUSTOM_TAG" >> $GITHUB_OUTPUT
-        echo "branch_tag=$DOCKER_TAG" >> $GITHUB_OUTPUT
-        echo "timestamp=$TIMESTAMP" >> $GITHUB_OUTPUT
-        echo "branch_latest_tag=$BRANCH_LATEST_TAG" >> $GITHUB_OUTPUT
+    - name: Generate Docker tags
+      id: generate-tags
+      uses: ./.github/actions/generate-docker-tags
 
     - name: Extract metadata (tags, labels) for Docker
       id: meta
@@ -87,8 +76,8 @@ runs:
         file: ${{ inputs.dockerfile-path }}
         push: true
         tags: |
-          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.custom_tag }}
-          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.branch_latest_tag }}
+          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.generate-tags.outputs.custom_tag }}
+          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.generate-tags.outputs.branch_latest_tag }}
           ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
