--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -75,11 +75,17 @@ jobs:
       packages: write
       attestations: write
       id-token: write
+    outputs:
+      custom-tag: ${{ steps.build-gcip.outputs.custom-tag }}
+      branch-tag: ${{ steps.build-gcip.outputs.branch-tag }}
+      timestamp: ${{ steps.build-gcip.outputs.timestamp }}
+      branch-latest-tag: ${{ steps.build-gcip.outputs.branch-latest-tag }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Build Qubership GCIP Docker Image
+        id: build-gcip
         uses: ./.github/actions/build-gcip
         with:
           registry: ${{ env.REGISTRY }}
@@ -96,11 +102,17 @@ jobs:
       packages: write
       attestations: write
       id-token: write
+    outputs:
+      custom-tag: ${{ steps.build-envgene.outputs.custom-tag }}
+      branch-tag: ${{ steps.build-envgene.outputs.branch-tag }}
+      timestamp: ${{ steps.build-envgene.outputs.timestamp }}
+      branch-latest-tag: ${{ steps.build-envgene.outputs.branch-latest-tag }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Build Qubership Envgene Docker Image
+        id: build-envgene
         uses: ./.github/actions/build-envgene
         with:
           registry: ${{ env.REGISTRY }}
@@ -129,11 +141,17 @@ jobs:
       packages: write
       attestations: write
       id-token: write
+    outputs:
+      custom-tag: ${{ steps.build-effective-set-generator.outputs.custom-tag }}
+      branch-tag: ${{ steps.build-effective-set-generator.outputs.branch-tag }}
+      timestamp: ${{ steps.build-effective-set-generator.outputs.timestamp }}
+      branch-latest-tag: ${{ steps.build-effective-set-generator.outputs.branch-latest-tag }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Build Effective Set Generator Docker Image
+        id: build-effective-set-generator
         uses: ./.github/actions/build-effective-set
         with:
           registry: ${{ env.REGISTRY }}
@@ -150,11 +168,17 @@ jobs:
       packages: write
       attestations: write
       id-token: write
+    outputs:
+      custom-tag: ${{ steps.build-effective-set-python.outputs.custom-tag }}
+      branch-tag: ${{ steps.build-effective-set-python.outputs.branch-tag }}
+      timestamp: ${{ steps.build-effective-set-python.outputs.timestamp }}
+      branch-latest-tag: ${{ steps.build-effective-set-python.outputs.branch-latest-tag }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Build Effective Set Generator Python Docker Image
+        id: build-effective-set-generator-python
         uses: ./.github/actions/build-effective-set-python
         with:
           registry: ${{ env.REGISTRY }}
@@ -186,51 +210,35 @@ jobs:
 
       - name: Update Docker Image Tags in Pipeline
         run: |
-          # Get current branch name and convert slashes to dashes for docker tag
-          BRANCH_NAME="${{ github.ref_name }}"
-          DOCKER_TAG=$(echo "$BRANCH_NAME" | sed 's|/|-|g')
-          
-          # Generate timestamp in format YYYYMMDD-HHMMSS
-          TIMESTAMP=$(date +%Y%m%d-%H%M%S)
-          
-          # Create custom tag: branch_timestamp
-          CUSTOM_TAG="${DOCKER_TAG}_${TIMESTAMP}"
-          
-          # Create branch-latest tag for the current branch
-          BRANCH_LATEST_TAG="${DOCKER_TAG}"
-          
-          echo "Current branch: $BRANCH_NAME"
-          echo "Docker tag: $DOCKER_TAG"
-          echo "Timestamp: $TIMESTAMP"
-          echo "Custom tag: $CUSTOM_TAG"
-          echo "Branch latest tag: $BRANCH_LATEST_TAG"
+          # Use outputs from previous jobs instead of regenerating tags
+          echo "Using tags from previous job outputs:"
           
           # Check which images were built and update accordingly
           if [[ "${{ needs.build-qubership-gcip.result }}" == "success" ]]; then
-            echo "Updating qubership-gcip tag to $BRANCH_LATEST_TAG"
-            sed -i "s|qubership-gcip:[^']*|qubership-gcip:$BRANCH_LATEST_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            echo "Updating qubership-gcip tag to ${{ needs.build-qubership-gcip.outputs.branch-latest-tag || 'latest' }}"
+            sed -i "s|qubership-gcip:[^']*|qubership-gcip:${{ needs.build-qubership-gcip.outputs.branch-latest-tag || 'latest' }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-qubership-envgene.result }}" == "success" ]]; then
-            echo "Updating qubership-envgene tag to $BRANCH_LATEST_TAG"
-            sed -i "s|qubership-envgene:[^']*|qubership-envgene:$BRANCH_LATEST_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            echo "Updating qubership-envgene tag to ${{ needs.build-qubership-envgene.outputs.branch-latest-tag || 'latest' }}"
+            sed -i "s|qubership-envgene:[^']*|qubership-envgene:${{ needs.build-qubership-envgene.outputs.branch-latest-tag || 'latest' }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-effective-set-generator.result }}" == "success" ]]; then
-            echo "Updating qubership-effective-set-generator tag to $BRANCH_LATEST_TAG"
-            sed -i "s|qubership-effective-set-generator:[^']*|qubership-effective-set-generator:$BRANCH_LATEST_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            echo "Updating qubership-effective-set-generator tag to ${{ needs.build-effective-set-generator.outputs.branch-latest-tag || 'latest' }}"
+            sed -i "s|qubership-effective-set-generator:[^']*|qubership-effective-set-generator:${{ needs.build-effective-set-generator.outputs.branch-latest-tag || 'latest' }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           if [[ "${{ needs.build-effective-set-generator-python.result }}" == "success" ]]; then
-            echo "Updating qubership-effective-set-generator-python tag to $BRANCH_LATEST_TAG"
-            sed -i "s|qubership-effective-set-generator-python:[^']*|qubership-effective-set-generator-python:$BRANCH_LATEST_TAG|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            echo "Updating qubership-effective-set-generator-python tag to ${{ needs.build-effective-set-generator-python.outputs.branch-latest-tag || 'latest' }}"
+            sed -i "s|qubership-effective-set-generator-python:[^']*|qubership-effective-set-generator-python:${{ needs.build-effective-set-generator-python.outputs.branch-latest-tag || 'latest' }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
           fi
           
           # Check if any images were updated
           if git diff --quiet github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml; then
             echo "No changes to commit - no images were built or tags were already up to date"
           else
-            echo "Updated pipeline.yml with docker tag: $BRANCH_LATEST_TAG"
+            echo "Updated pipeline.yml with docker tags from job outputs"
           fi
           
           # Show the changes
@@ -242,7 +250,7 @@ jobs:
             git config --global user.name "qubership-actions[bot]"
             git config --global user.email "qubership-actions[bot]@users.noreply.github.com"
             git add github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
-            git commit -m "Update docker image tags to $BRANCH_LATEST_TAG for branch $BRANCH_NAME"
+            git commit -m "Update docker image tags from job outputs for branch ${{ github.ref_name }}"
             
             # Push the changes
             git push origin HEAD:${{ github.ref_name }} || echo "Failed to push changes"
