feat: Updating the logic

--- a/.github/actions/build-effective-set/action.yml
+++ b/.github/actions/build-effective-set/action.yml
@@ -63,7 +63,7 @@ runs:
         password: ${{ inputs.github-token }}
 
     - name: Generate Docker tags
-      id: generate-tags
+      id: tags
       uses: ./.github/actions/generate-docker-tags
 
     - name: Extract metadata (tags, labels) for Docker
@@ -85,8 +85,8 @@ runs:
         file: ${{ inputs.dockerfile-path }}
         push: true
         tags: |
-          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.generate-tags.outputs.custom_tag }}
-          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.generate-tags.outputs.branch_latest_tag }}
+          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.custom_tag }}
+          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.branch_latest_tag }}
           ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
