--- a/.github/actions/build-envgene/action.yml
+++ b/.github/actions/build-envgene/action.yml
@@ -54,24 +54,24 @@ runs:
         password: ${{ inputs.github-token }}
 
     - name: Generate Docker tags
-      id: generate-tags
+      id: tags
       uses: ./.github/actions/generate-docker-tags
 
     - name: Debug outputs
       shell: bash
       run: |
         echo "DEBUG: Checking outputs from generate-docker-tags action:"
-        echo "custom_tag: ${{ steps.generate-tags.outputs.custom_tag }}"
-        echo "branch_tag: ${{ steps.generate-tags.outputs.branch_tag }}"
-        echo "timestamp: ${{ steps.generate-tags.outputs.timestamp }}"
-        echo "branch_latest_tag: ${{ steps.generate-tags.outputs.branch_latest_tag }}"
+        echo "custom_tag: ${{ steps.tags.outputs.custom_tag }}"
+        echo "branch_tag: ${{ steps.tags.outputs.branch_tag }}"
+        echo "timestamp: ${{ steps.tags.outputs.timestamp }}"
+        echo "branch_latest_tag: ${{ steps.tags.outputs.branch_latest_tag }}"
 
     - name: Debug Docker tags
       shell: bash
       run: |
         echo "DEBUG: Docker tags that will be used:"
-        echo "Tag 1: ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.generate-tags.outputs.custom_tag }}"
-        echo "Tag 2: ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.generate-tags.outputs.branch_latest_tag }}"
+        echo "Tag 1: ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.custom_tag }}"
+        echo "Tag 2: ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.branch_latest_tag }}"
         echo "Meta tags: ${{ steps.meta.outputs.tags }}"
 
     - name: Extract metadata (tags, labels) for Docker
@@ -93,8 +93,8 @@ runs:
         file: ${{ inputs.dockerfile-path }}
         push: true
         tags: |
-          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.generate-tags.outputs.custom_tag }}
-          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.generate-tags.outputs.branch_latest_tag }}
+          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.custom_tag }}
+          ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.image-name }}:${{ steps.tags.outputs.branch_latest_tag }}
           ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
