--- a/.github/actions/generate-docker-tags/action.yml
+++ b/.github/actions/generate-docker-tags/action.yml
@@ -5,22 +5,22 @@ description: 'Generate custom Docker tags with timestamp and branch information'
 outputs:
   custom-tag:
     description: 'Custom tag with timestamp'
-    value: ${{ steps.generate-tags.outputs.custom_tag }}
+    value: ${{ steps.tags.outputs.custom_tag }}
   branch-tag:
     description: 'Branch-based tag'
-    value: ${{ steps.generate-tags.outputs.branch_tag }}
+    value: ${{ steps.tags.outputs.branch_tag }}
   timestamp:
     description: 'Generated timestamp'
-    value: ${{ steps.generate-tags.outputs.timestamp }}
+    value: ${{ steps.tags.outputs.timestamp }}
   branch-latest-tag:
     description: 'Branch latest tag'
-    value: ${{ steps.generate-tags.outputs.branch_latest_tag }}
+    value: ${{ steps.tags.outputs.branch_latest_tag }}
 
 runs:
   using: composite
   steps:
     - name: Generate custom tags with timestamp
-      id: generate-tags
+      id: tags
       shell: bash
       run: |
         # Transform branch name to docker tag format
