feat: Updating the logic

--- a/.github/actions/build-effective-set/action.yml
+++ b/.github/actions/build-effective-set/action.yml
@@ -30,16 +30,16 @@ inputs:
     required: true
 
 outputs:
-  custom-tag:
+  custom_tag:
     description: 'Custom tag with timestamp'
     value: ${{ steps.tags.outputs.custom_tag }}
-  branch-tag:
+  branch_tag:
     description: 'Branch-based tag'
     value: ${{ steps.tags.outputs.branch_tag }}
   timestamp:
     description: 'Generated timestamp'
     value: ${{ steps.tags.outputs.timestamp }}
-  branch-latest-tag:
+  branch_latest_tag:
     description: 'Branch latest tag'
     value: ${{ steps.tags.outputs.branch_latest_tag }}
 
