chore: Updated the workflows

--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -255,7 +255,7 @@ jobs:
             git config --global user.name "qubership-actions[bot]"
             git config --global user.email "qubership-actions[bot]@users.noreply.github.com"
             git add github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
-            git commit -m "Update docker image tags from job outputs for branch ${{ github.ref_name }}"
+            git commit -m "chore: Update docker image tags from job outputs for branch ${{ github.ref_name }}"
             
             # Push the changes
             git push origin HEAD:${{ github.ref_name }} || echo "Failed to push changes"
