--- a/.github/workflows/docker_publish_release.yml
+++ b/.github/workflows/docker_publish_release.yml
@@ -116,7 +116,7 @@ jobs:
               git config --global user.name "qubership-actions[bot]"
               git config --global user.email "qubership-actions[bot]@users.noreply.github.com"
               git add github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
-              git commit -m "[skip ci] Update docker image tags"
+              git commit -m "chore: Update docker image tags from job outputs for branch ${{ github.ref_name }}"
               
               git push origin HEAD:${{ github.ref_name }} || echo "Failed to push changes"
             else
