--- a/github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+++ b/github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
@@ -63,16 +63,16 @@ env:
   ENVGENE_AGE_PRIVATE_KEY: ${{ secrets.ENVGENE_AGE_PRIVATE_KEY }}
 
   # Docker Images
-  DOCKER_IMAGE_GCIP: 'ghcr.io/netcracker/qubership-gcip:main_20250827-091929'
-  DOCKER_IMAGE_ENVGENE: 'ghcr.io/netcracker/qubership-envgene:main_20250827-091927'
-  DOCKER_IMAGE_EFFECTIVE_SET_GENERATOR: 'ghcr.io/netcracker/qubership-effective-set-generator:main_20250827-092037'
+  DOCKER_IMAGE_PIPEGENE: 'ghcr.io/netcracker/qubership-pipegene:main_20250829-100000'
+  DOCKER_IMAGE_ENVGENE: 'ghcr.io/netcracker/qubership-envgene:main_20250829-100000'
+  DOCKER_IMAGE_EFFECTIVE_SET_GENERATOR: 'ghcr.io/netcracker/qubership-effective-set-generator:main_20250829-100000'
 
 jobs:
   show_environment_variables:
     name: "Input Parameters Processing"
     runs-on: ubuntu-22.04
     container:
-      image: ${{ vars.DOCKER_IMAGE_GCIP }}
+      image: ${{ vars.DOCKER_IMAGE_PIPEGENE }}
       options: --user root
     outputs:
       env_matrix: ${{ steps.matrix-generator.outputs.env_matrix }}
@@ -94,7 +94,7 @@ jobs:
       CRED_ROTATION_PAYLOAD: ${{ env.CRED_ROTATION_PAYLOAD }}
       CRED_ROTATION_FORCE: ${{ env.CRED_ROTATION_FORCE }}
       ENV_GENERATION_PARAMS: ${{ steps.env-generation-params.outputs.ENV_GENERATION_PARAMS }}
-      DOCKER_IMAGE_GCIP: ${{ steps.docker-images.outputs.DOCKER_IMAGE_GCIP }}
+      DOCKER_IMAGE_PIPEGENE: ${{ steps.docker-images.outputs.DOCKER_IMAGE_PIPEGENE }}
       DOCKER_IMAGE_ENVGENE: ${{ steps.docker-images.outputs.DOCKER_IMAGE_ENVGENE }}
       DOCKER_IMAGE_EFFECTIVE_SET_GENERATOR: ${{ steps.docker-images.outputs.DOCKER_IMAGE_EFFECTIVE_SET_GENERATOR }}
 
@@ -105,7 +105,7 @@ jobs:
       - name: Set Docker Images
         id: docker-images
         run: |
-          echo "DOCKER_IMAGE_GCIP=${{ env.DOCKER_IMAGE_GCIP }}" >> $GITHUB_OUTPUT
+          echo "DOCKER_IMAGE_PIPEGENE=${{ env.DOCKER_IMAGE_PIPEGENE }}" >> $GITHUB_OUTPUT
           echo "DOCKER_IMAGE_ENVGENE=${{ env.DOCKER_IMAGE_ENVGENE }}" >> $GITHUB_OUTPUT
           echo "DOCKER_IMAGE_EFFECTIVE_SET_GENERATOR=${{ env.DOCKER_IMAGE_EFFECTIVE_SET_GENERATOR }}" >> $GITHUB_OUTPUT
 
@@ -203,7 +203,7 @@ jobs:
           fi
           echo ""
           echo "=== Docker Images ==="
-          echo "DOCKER_IMAGE_GCIP = $DOCKER_IMAGE_GCIP"
+          echo "DOCKER_IMAGE_PIPEGENE = $DOCKER_IMAGE_PIPEGENE"
           echo "DOCKER_IMAGE_ENVGENE = $DOCKER_IMAGE_ENVGENE"
           echo "DOCKER_IMAGE_EFFECTIVE_SET_GENERATOR = $DOCKER_IMAGE_EFFECTIVE_SET_GENERATOR"
           echo ""
@@ -286,7 +286,7 @@ jobs:
     if: needs.show_environment_variables.outputs.env_matrix != '[]'
     needs: show_environment_variables
     container:
-      image: ${{ needs.show_environment_variables.outputs.DOCKER_IMAGE_GCIP }}
+      image: ${{ needs.show_environment_variables.outputs.DOCKER_IMAGE_PIPEGENE }}
       options: --user root
     strategy:
       fail-fast: false
