chore: Updated the push to main logic

--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -31,8 +31,17 @@ on:
         default: true
         type: boolean  
   push:
+    branches-ignore:
+      - main
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'README.md'
+      - 'CHANGELOG.md'
+  pull_request:
+    types: [closed]
     branches:
-      - '**'
+      - 'main'
     paths-ignore:
       - '**.md'
       - 'docs/**'
