feat: Updating the workflows

--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -167,6 +167,8 @@ jobs:
 
   build-instance-repo-pipeline:
     needs:
+      - linters
+      - tests
       - build-qubership-pipegene
       - build-qubership-envgene
       - build-effective-set-generator
