--- a/.github/workflows/docker_publish_release.yml
+++ b/.github/workflows/docker_publish_release.yml
@@ -148,8 +148,8 @@ jobs:
       with:
         registry: ${{ env.REGISTRY }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        version: ${{ inputs.version }}-
-  
+        version: ${{ inputs.version }}
+
   build-qubership-envgene:
     needs: [update_image_tags]
     runs-on: ubuntu-latest
@@ -185,7 +185,7 @@ jobs:
       artifact-id: effective_set_jar
       ref: ${{ github.ref }}
     secrets:
-      maven-token: ${{ secrets.GITHUB_TOKEN }}        
+      maven-token: ${{ secrets.GITHUB_TOKEN }}
 
   build-effective-set-generator:
     needs: [build-effective-set-jar]
@@ -209,8 +209,8 @@ jobs:
       id: build-effective-set-generator
       with:
         registry: ${{ env.REGISTRY }}
-        github-token: ${{ secrets.GITHUB_TOKEN }}  
-  
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+
   build-instance-repo-pipeline:
     needs: [update_image_tags]
     runs-on: ubuntu-latest
@@ -230,7 +230,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
   github-release:
-    needs: [build-qubership-pipegene,build-qubership-envgene,build-effective-set-generator,build-instance-repo-pipeline]
+    needs: [build-qubership-pipegene, build-qubership-envgene, build-effective-set-generator, build-instance-repo-pipeline]
     uses: netcracker/qubership-workflow-hub/.github/workflows/release-drafter.yml@v1.0.3
     with:
       version: ${{ github.event.inputs.version }}
