chore: Fixed the dockerlogin

--- a/.github/workflows/docker_publish_release.yml
+++ b/.github/workflows/docker_publish_release.yml
@@ -147,6 +147,8 @@ jobs:
       id: build-pipegene
       with:
         registry: ${{ env.REGISTRY }}
+        git-user: ${{ secrets.GIT_USER }}
+        git-token: ${{ secrets.GIT_TOKEN }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
         version: ${{ inputs.version }}
 
@@ -172,8 +174,10 @@ jobs:
       id: build-envgene
       with:
         registry: ${{ env.REGISTRY }}
-        gh-access-token: ${{ secrets.GH_ACCESS_TOKEN }}
+        git-user: ${{ secrets.GIT_USER }}
+        git-token: ${{ secrets.GIT_TOKEN }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        version: ${{ inputs.version }}
 
   build-effective-set-jar:
     needs: [update_image_tags]
@@ -209,7 +213,10 @@ jobs:
       id: build-effective-set-generator
       with:
         registry: ${{ env.REGISTRY }}
+        git-user: ${{ secrets.GIT_USER }}
+        git-token: ${{ secrets.GIT_TOKEN }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        version: ${{ inputs.version }}
 
   build-instance-repo-pipeline:
     needs: [update_image_tags]
@@ -227,7 +234,10 @@ jobs:
       uses: ./.github/actions/build-pipeline
       with:
         registry: ${{ env.REGISTRY }}
+        git-user: ${{ secrets.GIT_USER }}
+        git-token: ${{ secrets.GIT_TOKEN }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        version: ${{ inputs.version }}
 
   github-release:
     needs: [build-qubership-pipegene, build-qubership-envgene, build-effective-set-generator, build-instance-repo-pipeline]
